// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddRenameFolderForm Snapshots {name: "common"} 1`] = `
<div
  className="w-100 d-flex align-items-center"
>
  <input
    className="form-control form-control-narrow filler mr-2"
    name="input_folder_name"
    onChange={[Function]}
    type="text"
    value="common"
  />
  <button
    className="btn btn-success btn-circle mr-1"
    disabled={false}
    name="apply"
    onClick={[Function]}
  >
    <i
      className="fa fa-chevron-circle-down"
    />
  </button>
  <button
    className="btn btn-warning btn-circle"
    name="cancel"
    onClick={[Function]}
  >
    <i
      className="fa fa-times"
    />
  </button>
</div>
`;

exports[`AddRenameFolderForm Snapshots {name: undefined} 1`] = `
<div
  className="w-100 d-flex align-items-center"
>
  <input
    className="form-control form-control-narrow filler mr-2"
    name="input_folder_name"
    onChange={[Function]}
    type="text"
    value=""
  />
  <button
    className="btn btn-success btn-circle mr-1"
    disabled={true}
    name="apply"
    onClick={[Function]}
  >
    <i
      className="fa fa-chevron-circle-down"
    />
  </button>
  <button
    className="btn btn-warning btn-circle"
    name="cancel"
    onClick={[Function]}
  >
    <i
      className="fa fa-times"
    />
  </button>
</div>
`;

exports[`AddRenameFolderForm Snapshots after some text inputted 1`] = `
<div
  className="w-100 d-flex align-items-center"
>
  <input
    className="form-control form-control-narrow filler mr-2"
    name="input_folder_name"
    onChange={[Function]}
    type="text"
    value="some"
  />
  <button
    className="btn btn-success btn-circle mr-1"
    disabled={false}
    name="apply"
    onClick={[Function]}
  >
    <i
      className="fa fa-chevron-circle-down"
    />
  </button>
  <button
    className="btn btn-warning btn-circle"
    name="cancel"
    onClick={[Function]}
  >
    <i
      className="fa fa-times"
    />
  </button>
</div>
`;

exports[`AddRenameFolderLine Snapshots if folder name is not specified 1`] = `
<div
  className="w-100 d-flex justify-content-end"
>
  <button
    className="btn btn-outline-secondary btn-circle mr-1"
    disabled={true}
    name="rename"
    onClick={[Function]}
  >
    <i
      className="fa fa-i-cursor"
    />
  </button>
  <button
    className="btn btn-success btn-circle"
    name="add"
    onClick={[Function]}
  >
    <i
      className="fa fa-plus"
    />
  </button>
</div>
`;

exports[`AddRenameFolderLine Snapshots if folder name specified 1`] = `
<div
  className="w-100 d-flex justify-content-end"
>
  <button
    className="btn btn-outline-secondary btn-circle mr-1"
    disabled={false}
    name="rename"
    onClick={[Function]}
  >
    <i
      className="fa fa-i-cursor"
    />
  </button>
  <button
    className="btn btn-success btn-circle"
    name="add"
    onClick={[Function]}
  >
    <i
      className="fa fa-plus"
    />
  </button>
</div>
`;

exports[`AddRenameFolderLine Snapshots when new button was clicked 1`] = `
<AddRenameFolderForm
  onApply={[Function]}
  onCancel={[Function]}
/>
`;

exports[`AddRenameFolderLine Snapshots when rename button was clicked 1`] = `
<AddRenameFolderForm
  name="new folder"
  onApply={[Function]}
  onCancel={[Function]}
/>
`;
